test if fix for images work on mobile + README.md updates

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -804,6 +804,8 @@ section .no-mb {
 img {
   width: 100%;
   height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 img.padded-bg {
   background-color: #E9E7E0;
